--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^4.6.2",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
-    "react-navigation": "^1.0.0-beta.19"
+    "react-navigation": "^1.0.0-beta.19",
+    "redux": "^3.7.2"
   }
 }
