--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   },
   "dependencies": {
     "expo": "^22.0.2",
-    "firebase": "^4.6.2",
-    "moment": "^2.19.3",
+    "firebase": "^4.8.0",
+    "moment": "^2.19.4",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
+    "react-native-collapsible": "^0.9.0",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-navigation": "^1.0.0-beta.19",
     "redux": "^3.7.2",
