--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
     "react-native-collapsible": "^0.9.0",
+    "react-native-elements": "^0.18.5",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-navigation": "^1.0.0-beta.19",
     "redux": "^3.7.2",
